# kabufuda-solver

./: CMakeLists.txt  README.md  kabufuda.cpp
